--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "firebase-admin": "^5.12.0",
     "lodash": "^4.17.5",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "node-gcm": "^0.14.10"
   }
 }
