--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^5.12.0",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "node-gcm": "^0.14.10"
   }
 }
